sl-lsl/tests/corpus/error/wrong_arg_count.lsl
// llSay takes (integer, string); one argument is too few.
default
{
    state_entry()
    {
        llSay(0);
    }
}
